Let's use more generic terms.

--- a/README
+++ b/README
@@ -55,6 +55,6 @@ SUPPORT AND DOCUMENTATION
 COPYRIGHT & LICENSE
     Copyright 2010 Sebastien Aperghis-Tramoni, all rights reserved.
 
-    This program is free software; you can redistribute it and/or modify it
-    under the same terms as Perl itself.
+    This software and associated documentation are free software; you can
+    redistribute it and/or modify it under the same terms as Perl itself.
 
